--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,36 @@
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  flex: 1;
+  justify-content: space-around;
 }
 
 .logo {
+  justify-content: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 8px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 25px;
 }
 
 a {
+  align-items: center;
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 8px;
   /* this removes the line under the links */
   text-decoration: none;
 }
